--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Contenido de la sección de perceptible -->
     <h2>Perceptible</h2>
     <p>Este principio enfatiza que la información y los componentes de la interfaz de usuario deben presentarse de manera que los usuarios puedan percibirlos, independientemente de sus capacidades sensoriales. Esto incluye proporcionar alternativas textuales para contenido no textual, ofrecer opciones para ajustar la presentación del contenido, y asegurar que el contenido audiovisual también sea accesible.</p>
-	<img src="imagenes/imagen1.png" alt="cerebro rosa con los dos hemiferios y un ojo con iris azul y esclera blanca. Debajo del ojo, líneas discontinuas sugieren transmisión de información.">
+	<img src="imagenes/imagen1.png" alt="un cerebro y un ojo con iris azul. Debajo del ojo, líneas discontinuas que sugieren transmisión de información.">
 	
 </section>
 
@@ -40,21 +40,21 @@
     <!-- Contenido de la sección operable -->
     <h2>Operable</h2>
     <p>Se asegura de que los componentes de la interfaz y la navegación sean operables para todos los usuarios. Esto incluye hacer que todas las funcionalidades estén disponibles desde el teclado, dar suficiente tiempo para leer y usar el contenido, evitar el diseño de contenido que pueda provocar convulsiones, y proporcionar maneras de ayudar a los usuarios a navegar, encontrar contenido, y determinar dónde se encuentran.</p>
-	<img src="imagenes/imagen2.png" alt="tres engranajes entrelazados en colores verde, azul y rojo. El concepto de engranajes operando juntos es un símbolo común para los procesos que deben funcionar en armonía para ser operables.">
+	<img src="imagenes/imagen2.png" alt="tres engranajes entrelazados operando juntos, es un símbolo común para los procesos que deben funcionar en armonía para ser operables.">
 </section>
 
 <section id="comprensible">
     <!-- Contenido de la sección comprensible -->
     <h2>Comprensible</h2>
     <p>Este principio establece que la información y el manejo de la interfaz de usuario deben ser comprensibles. Para ello, es importante que el contenido sea legible y comprensible, que las páginas web operen de manera predecible, y que los usuarios reciban asistencia para evitar y corregir errores.</p>
-	<img src="imagenes/imagen3.png" alt="bombilla con una sección faltante que parece un rompecabezas. Esto simboliza el concepto comprensible, indicando una idea o solución que no está completamente formada o entendida si le faltan partes a la estructura.">
+	<img src="imagenes/imagen3.png" alt="bombilla con una sección faltante que parece un rompecabezas. Indica la idea que una información no es completamente o entendida si le faltan partes.">
 </section>
 
     <section id="robusto">
         <!-- Contenido de la sección de robusto -->
         <h2>Robusto</h2>
         <p>Busca que el contenido sea lo suficientemente robusto como para ser interpretado de manera fiable por una amplia variedad de usuarios, incluyendo aquellos que utilizan tecnologías asistivas. Esto implica asegurar la compatibilidad con las tecnologías asistivas actuales y futuras mediante el uso de estándares web consolidados.</p>
-			<img src="imagenes/imagen4.png" alt="dos mancuernas de distintos tamaños y colores. Las mancuernas se relacionan con la robustez porque su uso en ejercicios fortalece y aumenta la masa muscular.">
+			<img src="imagenes/imagen4.png" alt="dos mancuernas que se relacionan con la robustez.">
     </section>
 
 <footer>
