--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	
 
 <header>
-    <nav>
+	<h1>Principios WCAG</h1>
+</header>	
+<nav>
         <!-- Barra de navegación aquí -->
         <ul>
             <li><a href="#perceptible">Perceptible</a></li>
@@ -20,14 +22,7 @@
             <li><a href="#comprensible">Comprensible</a></li>
             <li><a href="#robusto">Robusto</a></li>
         </ul>
-    </nav>
-</header>
-
-
-<section>
-	<h1>Principio WCAG</h1>
-</section>	
-
+</nav>
 <section id="perceptible">
     <!-- Contenido de la sección de perceptible -->
     <h2>Perceptible</h2>
